# ai-wine-analysis

./: .gitignore  MIGRATION.md  README.md
.github/workflows/: lint.yml
claude-code/: .env.example  .gitignore  ARCHITECTURE.md  Makefile  docker-compose.yml  pyproject.toml
claude-code/migrations/: alembic.ini
claude-code/migrations/versions/: 001_initial_schema.py  002_add_pgvector_embeddings.py
claude-code/scrapers/common/: base_scraper.py
claude-code/scrapers/wine_society/: csv_importer.py  order_scraper.py
claude-code/services/api/: main.py
claude-code/services/dashboard/: app.py
claude-code/services/ingestion/adapters/: base.py
claude-code/services/recommendation/agent/: orchestrator.py
claude-code/services/recommendation/engines/: collab_filter.py  content_filter.py  ensemble.py  semantic_search.py
claude-code/services/shared/: config.py
claude-code/services/shared/db/: connection.py
claude-code/services/shared/models/: __init__.py  lineage.py  price.py  provider.py  wine.py
claude-code/tests/unit/test_models/: test_wine.py
claude-code/tests/unit/test_scrapers/: test_base_scraper.py  test_wine_society_order_scraper.py
scripts/: migrate_wine_analysis.ps1
