[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sommelier"
version = "0.1.0"
description = "Multi-service wine data platform -- front-office hedge fund systems design demo"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alan"},
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "python-dotenv>=1.0",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # Dashboard
    "dash>=2.14",
    "plotly>=5.18",

    # Data processing
    "pandas>=2.0",
    "numpy>=1.24",

    # Web scraping
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "selenium>=4.15",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",

    # LLM / ML
    "anthropic>=0.39",
    "openai>=1.10",
    "scikit-learn>=1.3",
    "mlflow>=2.10",

    # Observability
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "black>=24.1",
    "ruff>=0.2",
    "pre-commit>=3.6",
    "types-requests>=2.31",
]

collab = [
    # Collaborative filtering (heavier dependency, separate group)
    "scikit-surprise>=1.1",
]

[tool.setuptools.packages.find]
include = ["scrapers*", "services*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "plotly.*",
    "selenium.*",
    "bs4.*",
    "mlflow.*",
    "surprise.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
